--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name"    : "HelloGitHubApp",
-    "version" : "0.1.0",
-    "main"    : "main.js"
-  }
+    "name": "HelloGitub",
+    "version": "0.1.0",
+    "main": "main.js"
+}
+h
